fix post merge alignment, added user count to description text

--- a/app/assets/stylesheets/components/_card_show.scss
+++ b/app/assets/stylesheets/components/_card_show.scss
@@ -15,7 +15,7 @@
 }
 .card-user-show {
   position: absolute;
-  right: 107px;
+  right: 97px;
   bottom: 10px;
 }
 .card-gmaps a {
@@ -45,6 +45,7 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+  color: black;
 }
 .card-description h2 {
   font-size: 24px;
